<resources>
    <string name="app_name">Watch Your Bird</string>
    <string name="title_schedule">Schedule</string>
    <string name="title_birdsFamily">Bird Families</string>
    <string name="title_singleBird">Birds</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="weekly_food_schedule">Weekly food schedule</string>
    <string name="age">Age : </string>
    <string name="name">Name : </string>
    <string name="gender">Gender : </string>
    <string name="know_your_birds">All your Birds</string>
    <string name="enter_bird_data">Enter bird data</string>
    <string name="bird_name">Bird name</string>
    <string name="save"> Save </string>
    <string name="cancel">Cancel</string>
    <string name="Gender">Gender</string>
    <string name="male">male</string>
    <string name="female">female</string>
    <string name="Age">Age</string>
    <string name="Empty">Empty</string>
    <string name="save_btn">Save</string>
    <string name="add">Add</string>
    <string name="edit_photo">Edit Photo</string>
    <string name="Delete">delete</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
</resources>