<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_gradient_theme">

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginBottom="6dp"
        android:background="@color/light_blue"
        app:layout_constraintBottom_toTopOf="@id/cancel_button" />

    <TextView
        android:id="@+id/uppertxt2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#252595"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:gravity="center"
        android:padding="4dp"
        android:text="@string/enter_bird_data"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/save_button"
        android:text="@string/add"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/cancel_button"
        app:layout_constraintStart_toStartOf="parent" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/cancel_button"
        android:text="@string/cancel"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/save_button" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="6dp"
        app:layout_constraintBottom_toTopOf="@id/save_button"
        app:layout_constraintTop_toBottomOf="@id/uppertxt2">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/bird_creat_img"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="16dp"
                android:scaleType="centerCrop"
                android:src="@drawable/bird"
                app:layout_constraintDimensionRatio="H,1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearanceOverlay="@style/roundedImageViewRounded_Small" />

            <Button
                android:id="@+id/add_bird_camera"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="18dp"
                android:background="#00777070"
                android:text="@string/edit_photo"
                app:layout_constraintBottom_toTopOf="@+id/bird_name_ET"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bird_creat_img" />

            <TextView
                android:id="@+id/nametxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bird_name"
                android:textColor="#252595"
                android:textSize="12sp"
                android:textStyle="bold"
                android:layout_marginStart="18dp"
                app:layout_constraintBottom_toBottomOf="@+id/bird_name_ET"
                app:layout_constraintEnd_toStartOf="@id/bird_name_ET"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/bird_name_ET" />


            <EditText
                android:id="@+id/bird_name_ET"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginStart="15dp"
                android:background="@drawable/blue_frame"
                android:hint="@string/bird_name"
                android:maxLines="1"
                android:layout_marginEnd="18dp"
                android:padding="6dp"
                android:textColor="@color/black"
                android:textColorHint="#ADA7A7"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/nametxt"
                app:layout_constraintTop_toBottomOf="@id/add_bird_camera" />

            <TextView
                android:id="@+id/agetxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Age"
                android:textColor="#252595"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/nametxt"
                app:layout_constraintStart_toStartOf="@id/nametxt"
                app:layout_constraintBottom_toBottomOf="@id/bird_age_ET"
                app:layout_constraintTop_toTopOf="@id/bird_age_ET" />

            <EditText
                android:id="@+id/bird_age_ET"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:background="@drawable/blue_frame"
                android:hint="@string/Age"
                android:inputType="number"
                android:layout_marginEnd="18dp"
                android:layout_marginStart="15dp"
                android:maxLines="1"
                android:padding="6dp"
                android:textColor="@color/black"
                android:textColorHint="#ADA7A7"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@id/nametxt"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/bird_name_ET" />

            <TextView
                android:id="@+id/gendertxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Gender"
                android:textColor="#252595"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/nametxt"
                app:layout_constraintTop_toTopOf="@id/myRadioGroup"
                app:layout_constraintBottom_toBottomOf="@id/myRadioGroup"
                app:layout_constraintEnd_toEndOf="@id/nametxt"/>

            <RadioGroup
                android:id="@+id/myRadioGroup"
                android:layout_width="0dp"
                android:layout_marginTop="25dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/blue_frame"
                android:orientation="vertical"
                android:padding="6dp"
                android:layout_marginEnd="18dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/nametxt"
                app:layout_constraintTop_toBottomOf="@id/bird_age_ET">

                <RadioButton
                    android:id="@+id/radiodonotknow"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:checked="true"
                    android:text="don't know"
                    android:textColor="#252595"
                    android:textSize="14sp" />

                <RadioButton
                    android:id="@+id/radiomale"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:checked="false"
                    android:text="@string/male"
                    android:textColor="#252595"
                    android:textSize="14sp" />

                <RadioButton
                    android:id="@+id/radiofemale"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/female"
                    android:textColor="#252595"
                    android:textSize="14sp" />
            </RadioGroup>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
