<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.allBirdsFragment.birdFragment.BirdFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/bird_img"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="60dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="60dp"
            android:scaleType="centerCrop"
            app:strokeWidth="2dp"
            app:strokeColor="@color/light_blue"
            app:shapeAppearanceOverlay="@style/roundedImageViewRounded_Small"
            tools:src="@drawable/bird"
            app:layout_constraintDimensionRatio="H,1:1"
            app:layout_constraintTop_toTopOf="parent"

            />

        <TextView
            android:id="@+id/name_not_tobe_edited"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:text="@string/name"
            android:textColor="#FAD301"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/bird_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/bird_name" />

        <EditText
            android:id="@+id/bird_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="16dp"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/name_save_btn"
            app:layout_constraintStart_toEndOf="@id/name_not_tobe_edited"
            app:layout_constraintTop_toBottomOf="@id/bird_img"
            tools:text="Botato" />

        <ImageView
            android:id="@+id/name_save_btn"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/save_button"
            android:paddingStart="6dp"
            android:paddingEnd="6dp"
            android:src="@drawable/ic_baseline_save_24"
            app:layout_constraintBottom_toBottomOf="@id/bird_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/bird_name"
            app:layout_constraintTop_toTopOf="@id/bird_name" />

        <TextView
            android:id="@+id/age_not_tobe_edited"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:text="@string/age"
            android:textColor="#FAD301"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/bird_age"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/bird_age" />

        <EditText
            android:id="@+id/bird_age"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="16dp"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/age_save_btn"
            app:layout_constraintStart_toEndOf="@id/name_not_tobe_edited"
            app:layout_constraintTop_toBottomOf="@id/bird_name"
            tools:text="1d 16m 2y" />

        <ImageView
            android:id="@+id/age_save_btn"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/save_button"
            android:paddingStart="6dp"
            android:paddingEnd="6dp"
            android:src="@drawable/ic_baseline_save_24"
            app:layout_constraintBottom_toBottomOf="@id/bird_age"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/bird_age"
            app:layout_constraintTop_toTopOf="@id/bird_age" />

        <TextView
            android:id="@+id/Gender_not_tobe_edited"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="25dp"
            android:text="@string/gender"
            android:textColor="#FAD301"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bird_age" />

        <RadioGroup
            android:id="@+id/myRadioGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/blue_frame"
            android:orientation="vertical"
            android:padding="6dp"
            app:layout_constraintEnd_toStartOf="@id/gender_save_btn"
            app:layout_constraintStart_toEndOf="@id/Gender_not_tobe_edited"
            app:layout_constraintTop_toTopOf="@id/Gender_not_tobe_edited">

            <RadioButton
                android:id="@+id/radiodonotknow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:checked="false"
                android:text="don't know"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <RadioButton
                android:id="@+id/radiomale"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:checked="false"
                android:text="@string/male"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <RadioButton
                android:id="@+id/radiofemale"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/female"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </RadioGroup>

        <ImageView
            android:id="@+id/gender_save_btn"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/save_button"
            android:paddingStart="6dp"
            android:paddingEnd="6dp"
            android:src="@drawable/ic_baseline_save_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/myRadioGroup"
            app:layout_constraintTop_toTopOf="@id/Gender_not_tobe_edited"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>